# regionate

./: CLAUDE.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
ci/: environment.yml  regionate.yml
conda/: meta.yaml
docs/: environment.yml
docs/source/: conf.py  index.rst  installation.rst
examples/: 0_cleanup_Purkey_basins.ipynb  0_compute_abyssal_heat_content.ipynb  0_compute_abyssal_transports_rho2.ipynb  0_pickle_connectedbasins.ipynb  0_pickle_griddedbasins.ipynb  0_pickle_griddedbasins_CM4.ipynb  0a_cleanup_Purkey_basins.ipynb  0a_pickle_griddedbasins.ipynb  0a_pickle_griddedbasins_CM4.ipynb  0b_pickle_griddedbasins.ipynb  0c_preprocess_barotropic_velocities.ipynb  1_advective_heat_convergence.ipynb  1_convergent_abyssal_transports.ipynb  1_divergence_theorem_complicated_boundary.ipynb  1_thickness_budget.ipynb  2_Arctic_heat_CM4p25.ipynb  2_advective_heat_convergence.ipynb  2_conveyorbelt_plots.ipynb  3_Arctic_heat_CM4p25.ipynb  3_thickness_budget.ipynb  4_application_to_global_CM4.ipynb  4_application_to_global_CM4p25.ipynb  4_bounded_by_named_sections.ipynb  5_ECCO_LLC90_multiface_regions.ipynb  example_dataset_grids.py  load_example_ECCO_grid.py  load_example_model_grid.py
examples/boundaries/: PJ2010_abyssal_basin_boundaries.mat
examples/pickled_regions/: PJ2010_regions
regionate/: __init__.py  basin.py  basins.py  boundaries.py  connected_basins.py  geometry.py  grid_conform.py  integrate.py  overlaps.py  region.py  regions.py  utilities.py  version.py
regionate/tests/: test_geometry.py  test_gridded_regions.py  test_multitile_regions.py  test_real_grids.py
tests/: test_gridded_regions.py
