[project]
name = "regionate"
dynamic = ["version"]
authors = [
    {name="Henri F. Drake", email="hfdrake@uci.edu"},
]
description = "A package for creating xgcm-grid consistent regional masks and boundaries"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "regionmask",
    "contourpy",
    "sectionate @ git+https://github.com/hdrake/sectionate/"
]

[project.urls]
"Homepage" = "https://github.com/hdrake/regionate"
"Bugs/Issues/Features" = "https://github.com/hdrake/regionate/issues"
"Sibling package" = "https://github.com/hdrake/sectionate"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "regionate/version.py"